--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,9 @@ on:
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
+permissions:
+  pull-requests: write
+
 jobs:
   publish:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
