--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,7 +11,8 @@ on:
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 permissions:
-  pull-requests: write
+  actions: read|write
+  pull-requests: read|write
 
 jobs:
   publish:
