--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,8 +11,8 @@ on:
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 permissions:
-  actions: read|write
-  pull-requests: read|write
+  actions: write
+  pull-requests: write
 
 jobs:
   publish:
