--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,10 @@ concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 permissions:
   actions: write
+  checks: write
   contents: write
+  deployments: write
+  packages: write
   pull-requests: write
 
 jobs:
