--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "build": "tsup-node",
     "release": "pnpm run build && changeset publish",
-    "lint": "tsc && eslint ."
+    "lint": "tsc && eslint .",
+	"test": "cd test && node ."
   },
   "repository": {
     "type": "git",
