--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "tsup-node",
     "release": "pnpm run build && changeset publish",
-    "lint": "tsc && eslint .",
+    "lint": "tsc && eslint src",
 	"test": "cd test && node ."
   },
   "repository": {
