--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,4 +1,12 @@
 {
 	"arrowParens": "avoid",
-	"useTabs": true
+	"useTabs": true,
+	"overrides": [
+		{
+			"files": ["package.json"],
+			"options": {
+				"useTabs": false
+			}
+		}
+	]
 }
