--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "@juhan280/experiment",
   "version": "0.2.2",
   "description": "my first package to get started with publishing package to npm",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "main": "lib/index.js",
+  "module": "lib/index.mjs",
+  "types": "lib/index.d.ts",
+  "files": [
+    "/lib"
+  ],
   "scripts": {
     "build": "tsup-node",
     "release": "pnpm run build && changeset publish",
