--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 		"target": "ESNext",
 		"module": "commonjs",
-		"outDir": "dist",
+		"outDir": "lib",
 		"noEmit": true,
 		"resolveJsonModule": true,
 		"importHelpers": true,
