add package.json to the export path

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
       "require": "./lib/index.js",
       "import": "./lib/index.mjs",
       "types": "./lib/index.d.ts"
-    }
+    },
+    "./package.json": "./package.json"
   },
   "files": [
     "/lib",
