--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "url": "https://github.com/Juhan280/experiment/issues"
   },
   "homepage": "https://github.com/Juhan280/experiment#readme",
+  "dependencies": {
+    "zod": "^3.21.4"
+  },
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
     "@types/node": "^18.15.3",
@@ -42,8 +45,5 @@
     "prettier": "^2.8.4",
     "tsup": "^6.6.3",
     "typescript": "^4.9.5"
-  },
-  "dependencies": {
-    "tslib": "^2.5.0"
   }
 }
