--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@juhan280/experiment",
   "version": "0.4.0",
-  "description": "my first package to get started with publishing package to npm",
+  "description": "It is just a test project.",
   "main": "lib/index.js",
   "module": "lib/index.mjs",
   "types": "lib/index.d.ts",
