--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint": "^8.36.0",
     "prettier": "^2.8.4",
     "tsup": "^6.6.3",
+    "typedoc": "^0.23.27",
     "typescript": "^4.9.5"
   }
 }
