--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   ],
   "scripts": {
     "build": "tsup-node",
+    "doc": "typedoc src/index.ts",
     "release": "pnpm run build && changeset publish",
     "lint": "tsc && eslint src"
   },
