--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   ],
   "scripts": {
     "build": "tsup-node",
-    "doc": "typedoc src/index.ts",
+    "docs": "typedoc src/index.ts",
     "release": "pnpm run build && changeset publish",
     "lint": "tsc && eslint src"
   },
