Update homapage in package.json

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "bugs": {
     "url": "https://github.com/Juhan280/experiment/issues"
   },
-  "homepage": "https://github.com/Juhan280/experiment#readme",
+  "homepage": "https://Juhan280.github.io/experiment",
   "dependencies": {
     "zod": "^3.21.4"
   },
