--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "build": "tsup-node",
     "docs": "typedoc src/index.ts",
-    "release": "pnpm run build && pnpm run docs && changeset publish",
+    "release": "pnpm run build && changeset publish",
     "lint": "tsc && eslint src"
   },
   "repository": {
