--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,6 @@
 		"ecmaVersion": "latest",
 		"sourceType": "module"
 	},
-	"plugins": ["@typescript-eslint"],
+	"plugins": ["@typescript-eslint", "eslint-plugin-tsdoc"],
 	"rules": { "no-mixed-spaces-and-tabs": "off" }
 }
