--- a/package.json
+++ b/package.json
@@ -45,9 +45,11 @@
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
     "eslint": "^8.36.0",
+    "eslint-plugin-tsdoc": "^0.2.17",
     "prettier": "^2.8.4",
     "tsup": "^6.6.3",
     "typedoc": "^0.23.27",
+    "typedoc-plugin-zod": "^1.0.1",
     "typescript": "^4.9.5"
   }
 }
