--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   ],
   "scripts": {
     "build": "tsup-node",
-    "docs": "typedoc src/index.ts",
-    "release": "pnpm run build && changeset publish",
+    "release": "pnpm run build && changeset version && typedoc && changeset publish",
     "lint": "tsc && eslint src"
   },
   "keywords": [
