--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,3 +1,5 @@
+blank_issues_enabled: false
 contact_links:
   - name: Discord Community Support
+    url: https://example.com
     about: Issue tracker is for bug reports and feature requests only. If you need help, go to Discussions.
